--- a/templates/device_edit.html
+++ b/templates/device_edit.html
@@ -14,12 +14,16 @@
               {{ form.type(class="form-control") }}
             </div>
             <div class="col-md-6">
+              {{ form.category.label(class="form-label") }}
+              {{ form.category(class="form-select device-category-select") }}
+            </div>
+            <div class="col-md-6">
               {{ form.status.label(class="form-label") }}
               {{ form.status(class="form-select") }}
             </div>
             <div class="col-md-6">
               {{ form.brand.label(class="form-label") }}
-              {{ form.brand(class="form-control") }}
+              {{ form.brand(class="form-select device-brand-select", **{'data-initial': form.brand.data or '', 'data-placeholder': 'Seleccione una marca'}) }}
             </div>
             <div class="col-md-6">
               {{ form.model.label(class="form-label") }}
@@ -41,6 +45,14 @@
               {{ form.location.label(class="form-label") }}
               {{ form.location(class="form-control") }}
             </div>
+            <div class="col-md-6">
+              {{ form.ip_address.label(class="form-label") }}
+              {{ form.ip_address(class="form-control") }}
+            </div>
+            <div class="col-md-6">
+              {{ form.operating_system.label(class="form-label") }}
+              {{ form.operating_system(class="form-select device-os-select", **{'data-initial': form.operating_system.data or '', 'data-placeholder': 'Seleccione un sistema operativo'}) }}
+            </div>
             <div class="col-md-12">
               {{ form.assigned_user_id.label(class="form-label") }}
               {{ form.assigned_user_id(class="form-select") }}
@@ -57,6 +69,77 @@
         </form>
       </div>
     </div>
-  </div>
 </div>
+</div>
+{% endblock %}
+
+{% block extra_js %}
+<script>
+  const deviceBrandMap = {{ device_brand_map|tojson }};
+  const deviceOSMap = {{ device_os_map|tojson }};
+
+  function buildOptions(map, category, placeholderLabel, currentValue) {
+    const options = new Map();
+    options.set("", placeholderLabel);
+    const categoryOptions = map[category] || [];
+    categoryOptions.forEach(([value, label]) => {
+      if (!options.has(value)) {
+        options.set(value, label);
+      }
+    });
+    if (currentValue && !options.has(currentValue)) {
+      options.set(currentValue, currentValue);
+    }
+    return options;
+  }
+
+  function applyOptions(select, options, currentValue) {
+    if (!select) return;
+    const previous = currentValue || select.dataset.initial || "";
+    select.innerHTML = "";
+    options.forEach((label, value) => {
+      const option = document.createElement("option");
+      option.value = value;
+      option.textContent = label;
+      select.appendChild(option);
+    });
+    select.value = previous;
+    select.dataset.initial = select.value || "";
+  }
+
+  function refreshDeviceForm(form) {
+    if (!form) return;
+    const categorySelect = form.querySelector(".device-category-select");
+    if (!categorySelect) return;
+    const brandSelect = form.querySelector(".device-brand-select");
+    const osSelect = form.querySelector(".device-os-select");
+    const categoryValue = categorySelect.value || categorySelect.dataset.initial || "computer";
+
+    if (brandSelect) {
+      const brandOptions = buildOptions(
+        deviceBrandMap,
+        categoryValue,
+        brandSelect.dataset.placeholder || "Seleccione una marca",
+        brandSelect.value
+      );
+      applyOptions(brandSelect, brandOptions, brandSelect.value);
+    }
+
+    if (osSelect) {
+      const osOptions = buildOptions(
+        deviceOSMap,
+        categoryValue,
+        osSelect.dataset.placeholder || "Seleccione un sistema operativo",
+        osSelect.value
+      );
+      applyOptions(osSelect, osOptions, osSelect.value);
+    }
+  }
+
+  const categorySelect = document.querySelector(".device-category-select");
+  if (categorySelect) {
+    categorySelect.addEventListener("change", () => refreshDeviceForm(categorySelect.closest("form")));
+    refreshDeviceForm(categorySelect.closest("form"));
+  }
+</script>
 {% endblock %}
